Corrected multi-objective algorithms.

--- a/src/optimization/multi_objective/gde3/Makefile
+++ b/src/optimization/multi_objective/gde3/Makefile
@@ -1,6 +1,3 @@
-compile:
-	g++ -c GDE3.cpp
-
 all:
-#	g++ -Wall -g -o o main.cpp Ripple.cpp Differential_Evolution.cpp -lzrandom
+	g++ -Wall -g -o o main.cpp ../problems/WFG_Problem.cpp ../problems/Toolkit/* GDE3.cpp -lzrandom
 
