--- a/src/optimization/multi_objective/subpopulation_framework/Makefile
+++ b/src/optimization/multi_objective/subpopulation_framework/Makefile
@@ -1,7 +1,12 @@
 compile:
 	g++ -c Subpopulation_Framework.cpp Classic_Subpopulation.cpp GDE3_Subpopulation.cpp Novelty_Subpopulation.cpp Subpopulation.cpp
 
+#all:
+	#g++ -Wall -g -o o main.cpp Ripple.cpp Differential_Evolution.cpp -lzrandom
+#	g++ -Wall -g -o o main.cpp ../problems/WFG_Problem.cpp ../problems/Toolkit/* Subpopulation_Framework.cpp Subpopulation.cpp Classic_Subpopulation.cpp GDE3_Subpopulation.cpp Novelty_Subpopulation.cpp -lzrandom
+
 all:
 	#g++ -Wall -g -o o main.cpp Ripple.cpp Differential_Evolution.cpp -lzrandom
-	g++ -Wall -g -o o main.cpp ../problems/WFG_Problem.cpp ../problems/Toolkit/* Subpopulation_Framework.cpp Subpopulation.cpp Classic_Subpopulation.cpp GDE3_Subpopulation.cpp Novelty_Subpopulation.cpp -lzrandom
+	g++ -Wall -g -o o main.cpp ../problems/WFG_Problem.cpp ../problems/Toolkit/* Differential_Evolution.cpp Subpopulation.cpp Classic_Subpopulation.cpp GDE3_Subpopulation.cpp Novelty_Subpopulation.cpp -lzrandom
+
 
