--- a/src/optimization/multi_objective/gde3/Makefile
+++ b/src/optimization/multi_objective/gde3/Makefile
@@ -1,3 +1,7 @@
+compile:
+	g++ -c ../problems/WFG_Problem.cpp ../problems/Toolkit/* GDE3.cpp -lzrandom
+
+
 all:
 	g++ -Wall -g -o o main.cpp ../problems/WFG_Problem.cpp ../problems/Toolkit/* GDE3.cpp -lzrandom
 
